docs/api/qiskit-ibm-runtime/0.47/options-models.mdx
---
title: options_models (v0.47)
description: API reference for qiskit_ibm_runtime.options_models in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.options_models
---

<span id="primitive-options-models-qiskit-ibm-runtime-options-models" />

<span id="module-qiskit_ibm_runtime.options_models" />

# Primitive options models

`qiskit_ibm_runtime.options_models`

Options that can be passed to the [`Executor`](/docs/api/qiskit-ibm-runtime/0.47/executor "qiskit_ibm_runtime.Executor") and `NoiseLearnerV3`.

## Classes

### Base primitive options

|                                                                                                                                                                |                                                                                                                                                           |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`ExecutorOptions`](/docs/api/qiskit-ibm-runtime/0.47/options-models-executor-options "qiskit_ibm_runtime.options_models.ExecutorOptions")                     | Options for the executor.                                                                                                                                 |
| [`NoiseLearnerV3Options`](/docs/api/qiskit-ibm-runtime/0.47/options-models-noise-learner-v3-options "qiskit_ibm_runtime.options_models.NoiseLearnerV3Options") | Options for [`NoiseLearnerV3`](/docs/api/qiskit-ibm-runtime/0.47/noise-learner-v3-noise-learner-v3 "qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3"). |

### Suboptions

|                                                                                                                                                            |                                               |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------- |
| [`EnvironmentOptions`](/docs/api/qiskit-ibm-runtime/0.47/options-models-environment-options "qiskit_ibm_runtime.options_models.EnvironmentOptions")        | Options related to the execution environment. |
| [`ExecutionOptions`](/docs/api/qiskit-ibm-runtime/0.47/options-models-execution-options "qiskit_ibm_runtime.options_models.ExecutionOptions")              | Low-level execution options.                  |
| [`PostSelectionOptions`](/docs/api/qiskit-ibm-runtime/0.47/options-models-post-selection-options "qiskit_ibm_runtime.options_models.PostSelectionOptions") | Options for post selecting results.           |

